# Computing-At-Scale-2025

./: README.md
Assignment0/: .gitignore  Makefile  README.md  assignment0.md  header.hpp  main.cpp  matrix2.mtx  matrixMatrixProduct.cpp  matrixMultiply.cpp  matrixMultiply.hpp  matrixVectorProduct.cpp  mmio.h  readwriteMMfiles.cpp  readwriteMMfiles.hpp  result.mtx  testScript.cpp  vector1.mtx
Assignment1/: Assignment1.md  CMakeLists.txt  PolynomialIntegrate.cpp  README.md  numerical_integration.cpp  numerical_integration.hpp  unit_tests.cpp
